samples/_failures_safe/1761467216_0b0af4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce996b79.c: In function ‘main’:
./samples/SAFE/__tmp_ce996b79.c:146:16: error: missing terminating " character
  146 |         printf("
      |                ^
./samples/SAFE/__tmp_ce996b79.c:146:9: error: expected expression at end of input
  146 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_ce996b79.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce996b79.c:146:9: error: expected declaration or statement at end of input
